ver 0.1.0-beta.2 - 各画面の枠組みとフェードを実装     - https://scrapbox.io/AXT-Holorhysm/各画面の切替時のフェード を参照 - 毎回404エラーがコンソールに出るのがめんどいのでCSSとJSの空ファイルを作成

--- a/score/list.jsonc
+++ b/score/list.jsonc
@@ -1,12 +1,16 @@
 {
+    /* ==== 全楽曲のID一覧を指定順に並べる。 ==== */
     "all": {
+        // addition : 楽曲の追加日順
         "addition": [
             "ExcuseBunny_Pekora"
         ],
+        // addition : 楽曲の日本語名順
         "name_ja": [
             "ExcuseBunny_Pekora"
         ]
     },
+    /* ==== 『いいわけバニー』(兎田ぺこら) ==== */
     "ExcuseBunny_Pekora": {
         "all": [
             "Bloom"
