ver 0.1.0-beta.7 - 譜面ファイルの拡張子変更(jsonc)を譜面一覧jsonに反映 - いいわけバニーのBloom譜面を仮置き(あとで作る) - プレイ譜面選択時、play.js側のメイン関数にAudioElementと譜面ファイルObjを渡すように - play.js側メイン関数をデバッグ用に仮置き(ログ出力のみ) - 多言語対応のためにtitle.jsでグローバル定数としてdisplayLangを定義 - DS_Store絶対殺す同盟！！

--- a/score/list.jsonc
+++ b/score/list.jsonc
@@ -28,7 +28,7 @@
             "en": "Nanahoshi Orchestra"
         },
         "Bloom": {
-            "score": "score/ExcuseBunny_Pekora/Bloom.json",
+            "score": "score/ExcuseBunny_Pekora/Bloom.jsonc",
             "music": "score/ExcuseBunny_Pekora/common.mp3",
             "difficulty": "18+",
             "constant": 18.8,
